--- a/appgrid/index.html
+++ b/appgrid/index.html
@@ -25,6 +25,28 @@
 		<link rel="stylesheet" type="text/css" href="css/mobile.css" />
 	</head>
 	<body>
-		...
+		<div class="row header">
+			<div class="twelve column">
+				<h1 class="glow">AppGrid</h1>
+			</div>
+		</div>
+		<div class="row about">
+			<div class="twelve column">
+				<div class="container">
+					<p>
+						ugly site will be pretty soon maybe
+					</p>
+					<p>
+						examples: <br />
+						<ul>
+							<li><a href="examples/appshop">AppShop</a></li>
+						</ul>
+						<ul>
+							<li><a href="examples/appfiddle">AppFiddle</a></li>
+						</ul>
+					</p>
+				</div>
+			</div>
+		</div>
 	</body>
 </html>
