appgrid site done

--- a/appgrid/examples/appshop/index.html
+++ b/appgrid/examples/appshop/index.html
@@ -17,6 +17,7 @@
 		<link rel="stylesheet" type="text/css" href="../../css/font-awesome.min.css" />
 		<link rel="stylesheet" type="text/css" href="../../css/appgrid.css" />
 		<style type="text/css">
+			/* CSS Reset */
 			*, *:before, *:after {
 				-moz-box-sizing: border-box;
 				box-sizing: border-box;
